--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@sap/cds-lsp": "4.2.0",
     "@sap/cds-messaging": "1.8.3",
     "@sap/cds-mtx": "1.0.25",
-    "@sap/cds-odata-v2-adapter-proxy": "1.4.60",
+    "@sap/cds-odata-v2-adapter-proxy": "1.5.0",
     "@sap/cds-ql": "1.21.2",
     "@sap/cds-reflect": "2.13.4",
     "@sap/cds-rest": "1.6.3",
@@ -83,6 +83,7 @@
     "@sap/cloud-sdk-op-vdm-condition-contract-type-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-controlling-area-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-controlling-debit-credit-code-service": "1.23.0",
+    "@sap/cloud-sdk-op-vdm-cost-center-activity-type-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-cost-center-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-credit-memo-request-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-customer-material-service": "1.23.0",
@@ -131,6 +132,7 @@
     "@sap/cloud-sdk-op-vdm-partner-company-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-payment-advice-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-personnel-settlement-document-service": "1.23.0",
+    "@sap/cloud-sdk-op-vdm-phase-relationship-type-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-physical-inventory-doc-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-planned-independent-requirement-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-planned-orders-service": "1.23.0",
@@ -139,14 +141,15 @@
     "@sap/cloud-sdk-op-vdm-process-order-v2-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-product-allocation-object-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-product-allocation-sequence-service": "1.23.0",
+    "@sap/cloud-sdk-op-vdm-product-availability-info-basic-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-product-group-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-product-master-data-including-classification-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-product-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-product-specification-composition-configuration-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-product-specification-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-product-time-dependent-stock-service": "1.23.0",
+    "@sap/cloud-sdk-op-vdm-production-order-confirmation-v2-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-production-order-v2-service": "1.23.0",
-    "@sap/cloud-sdk-op-vdm-production-routing-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-production-supply-area-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-profit-center-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-purchase-contract-service": "1.23.0",
@@ -160,10 +163,25 @@
     "@sap/cloud-sdk-op-vdm-recipe-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-report-ehs-incident-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-request-for-quotation-service": "1.23.0",
+    "@sap/cloud-sdk-op-vdm-reservation-document-service": "1.23.0",
+    "@sap/cloud-sdk-op-vdm-responsibility-management-team-configuration-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-responsibility-management-team-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-sales-and-distribution-document-reason-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-sales-contract-service": "1.23.0",
+    "@sap/cloud-sdk-op-vdm-sales-district-service": "1.23.0",
+    "@sap/cloud-sdk-op-vdm-sales-doc-with-credit-block-service": "1.23.0",
+    "@sap/cloud-sdk-op-vdm-sales-inquiry-service": "1.23.0",
+    "@sap/cloud-sdk-op-vdm-sales-order-service": "1.23.0",
+    "@sap/cloud-sdk-op-vdm-sales-order-simulation-service": "1.23.0",
+    "@sap/cloud-sdk-op-vdm-sales-order-without-charge-service": "1.23.0",
+    "@sap/cloud-sdk-op-vdm-sales-organization-service": "1.23.0",
+    "@sap/cloud-sdk-op-vdm-sales-pricing-condition-record-service": "1.23.0",
+    "@sap/cloud-sdk-op-vdm-sales-pricing-condition-type-service": "1.23.0",
+    "@sap/cloud-sdk-op-vdm-sales-pricing-procedure-service": "1.23.0",
+    "@sap/cloud-sdk-op-vdm-sales-quotation-service": "1.23.0",
+    "@sap/cloud-sdk-op-vdm-sales-scheduling-agreement-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-scheduling-agreement-service": "1.23.0",
+    "@sap/cloud-sdk-op-vdm-segment-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-service-confirmation-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-service-entry-sheet-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-service-order-service": "1.23.0",
@@ -395,6 +413,7 @@
     "@sap/cloud-sdk-vdm-workforce-timesheet-service": "1.23.0",
     "@sap/consume-services": "1.7.9",
     "@sap/consume-services-types": "0.3.9",
+    "@sap/create-hana-database-artifact": "1.0.0",
     "@sap/destinations": "0.2.1",
     "@sap/di.code-validation.core": "1.0.13",
     "@sap/di.code-validation.grunt": "1.0.7",
@@ -416,25 +435,31 @@
     "@sap/fibers": "4.0.3-0",
     "@sap/fibrous": "0.5.0-5",
     "@sap/fiori-json-services": "1.0.1",
+    "@sap/generator-add-hdb-module": "1.0.0",
     "@sap/generator-base-mta-module": "1.3.3",
     "@sap/generator-cap-project": "1.4.0",
-    "@sap/generator-cds": "2.17.2",
+    "@sap/generator-cds": "2.17.3",
     "@sap/generator-fiori-elements": "1.0.25",
     "@sap/generator-fiori-freestyle": "0.9.17",
+    "@sap/generator-hdb-project": "1.0.0",
     "@sap/grunt-sapui5-bestpractice-build": "1.4.6",
     "@sap/grunt-sapui5-bestpractice-test": "2.0.2",
     "@sap/grunt-sapui5module-bestpractice-build": "1.0.6",
     "@sap/grunt-tests-webide-bestpractice": "0.0.15",
     "@sap/hana-client": "2.6.64",
+    "@sap/hana-database-explorer": "1.0.0",
+    "@sap/hana-sqlscript-lsp": "1.0.1",
+    "@sap/hana-tooling-feature-toggles": "1.0.0",
     "@sap/hdbext": "7.0.1",
     "@sap/hdi": "2.2.7",
     "@sap/hdi-deploy": "3.11.15",
     "@sap/hdi-dynamic-deploy": "1.7.5",
+    "@sap/hrtt-core-vscode": "1.0.0",
     "@sap/html5-app-deployer": "2.2.0",
     "@sap/html5-repo-mock": "1.8.0",
     "@sap/instance-manager": "2.2.0",
     "@sap/jobs-client": "1.6.1",
-    "@sap/logging": "6.0.1",
+    "@sap/logging": "6.0.2",
     "@sap/modules-exploration": "1.6.8",
     "@sap/mta-lib": "1.6.2",
     "@sap/node-jwt": "1.6.13",
@@ -463,15 +488,17 @@
     "@sap/ux-cds-odata-language-server-extension": "1.0.7",
     "@sap/ux-specification": "1.84.0",
     "@sap/ux-ui5-fe-mockserver-middleware": "1.0.23",
-    "@sap/ux-ui5-tooling": "1.0.26",
+    "@sap/ux-ui5-tooling": "1.0.27",
     "@sap/vscode-cds": "3.2.0",
+    "@sap/webide-hdi-base-feature-vscode": "1.0.0",
+    "@sap/webide-hdi-feature-vscode": "1.0.0",
     "@sap/wing-run-config-types": "4.1.3",
     "@sap/wing-service-binding": "1.9.6",
     "@sap/wing-service-explorer": "1.6.1",
     "@sap/xb-msg": "0.9.12",
     "@sap/xb-msg-amqp-v091": "0.9.12",
     "@sap/xb-msg-amqp-v100": "0.9.48",
-    "@sap/xb-msg-env": "0.9.6",
+    "@sap/xb-msg-env": "0.9.7",
     "@sap/xb-msg-mqtt-v311": "0.9.14",
     "@sap/xsenv": "3.1.0",
     "@sap/xsjs": "6.0.8",
