--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   },
   "homepage": "https://github.com/Seeker0/SAP-NPM-API-collection#readme",
   "dependencies": {
-    "@sap/abap-deploy": "0.10.18",
-    "@sap/apihub-service-provider": "1.0.2",
+    "@sap/abap-deploy": "0.10.23",
+    "@sap/apihub-service-provider": "1.0.5",
     "@sap/approuter": "9.1.0",
     "@sap/asp-middleware": "1.0.4",
     "@sap/audit-logging": "3.2.0",
@@ -34,14 +34,14 @@
     "@sap/cds-dk-foss": "1.0.1",
     "@sap/cds-foss": "2.2.0",
     "@sap/cds-hana": "1.25.2",
-    "@sap/cds-lsp": "4.2.0",
+    "@sap/cds-lsp": "4.3.0",
     "@sap/cds-messaging": "1.8.3",
     "@sap/cds-mtx": "1.0.27",
     "@sap/cds-odata-v2-adapter-proxy": "1.5.4",
     "@sap/cds-ql": "1.21.2",
     "@sap/cds-reflect": "2.13.5",
     "@sap/cds-rest": "1.6.3",
-    "@sap/cds-runtime": "2.8.2",
+    "@sap/cds-runtime": "2.8.3",
     "@sap/cds-services": "1.27.2",
     "@sap/cds-sidecar-client": "1.1.12",
     "@sap/cds-sql": "1.24.1",
@@ -199,9 +199,6 @@
     "@sap/cloud-sdk-op-vdm-task-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-treasury-position-flow-service": "1.23.0",
     "@sap/cloud-sdk-op-vdm-treasury-posting-journal-entry-line-item-service": "1.23.0",
-    "@sap/cloud-sdk-op-vdm-vehicle-location-service": "1.23.0",
-    "@sap/cloud-sdk-op-vdm-vehicle-service": "1.23.0",
-    "@sap/cloud-sdk-op-vdm-work-centers-service": "1.23.0",
     "@sap/cloud-sdk-vdm-accounting-document-service": "1.23.0",
     "@sap/cloud-sdk-vdm-activity-type-service": "1.23.0",
     "@sap/cloud-sdk-vdm-api-legal-document-status-service": "1.23.0",
@@ -412,8 +409,8 @@
     "@sap/cloud-sdk-vdm-workforce-availability-service": "1.23.0",
     "@sap/cloud-sdk-vdm-workforce-skill-tags-service": "1.23.0",
     "@sap/cloud-sdk-vdm-workforce-timesheet-service": "1.23.0",
-    "@sap/consume-services": "1.7.10",
-    "@sap/consume-services-types": "0.3.9",
+    "@sap/consume-services": "1.7.14",
+    "@sap/consume-services-types": "0.3.11",
     "@sap/create-hana-database-artifact": "1.0.0",
     "@sap/destinations": "0.2.1",
     "@sap/di.code-validation.core": "1.0.13",
@@ -437,11 +434,12 @@
     "@sap/fibrous": "0.5.0-5",
     "@sap/fiori-json-services": "1.0.1",
     "@sap/generator-add-hdb-module": "1.0.0",
-    "@sap/generator-base-mta-module": "1.3.3",
-    "@sap/generator-cap-project": "1.4.1",
+    "@sap/generator-base-mta-module": "1.3.4",
+    "@sap/generator-cap-project": "1.4.2",
     "@sap/generator-cds": "2.17.4",
-    "@sap/generator-fiori-elements": "1.0.27",
-    "@sap/generator-fiori-freestyle": "0.9.19",
+    "@sap/generator-fiori": "1.1.0",
+    "@sap/generator-fiori-elements": "1.1.0",
+    "@sap/generator-fiori-freestyle": "1.1.0",
     "@sap/generator-hdb-project": "1.0.0",
     "@sap/grunt-sapui5-bestpractice-build": "1.4.6",
     "@sap/grunt-sapui5-bestpractice-test": "2.0.2",
@@ -464,41 +462,41 @@
     "@sap/jobs-client": "1.6.1",
     "@sap/logger-for-bas-extensions": "1.0.1",
     "@sap/logging": "6.0.2",
-    "@sap/modules-exploration": "1.6.8",
+    "@sap/modules-exploration": "1.6.10",
     "@sap/mta-lib": "1.6.6",
-    "@sap/node-jwt": "1.6.13",
-    "@sap/node-vsi": "1.4.20",
+    "@sap/node-jwt": "1.6.14",
+    "@sap/node-vsi": "1.4.21",
     "@sap/odata-commons": "2.4.2",
     "@sap/odata-server": "1.8.3",
     "@sap/odata-v4": "1.9.0",
     "@sap/odm": "2.0.0",
     "@sap/open.fe": "1.86.0",
     "@sap/pdms-sdk": "1.0.0",
-    "@sap/portal-cf-content-deployer": "4.10.0-20201227083522",
+    "@sap/portal-cf-content-deployer": "4.12.0-20210201101230",
     "@sap/sbf": "6.2.5",
     "@sap/sbss": "5.1.0",
     "@sap/sds-deploy": "2.0.5",
-    "@sap/service-providers": "0.3.7",
+    "@sap/service-providers": "0.3.12",
     "@sap/site-app-server": "1.17.0",
     "@sap/site-content-deployer": "1.20.0",
     "@sap/site-entry": "1.30.0",
     "@sap/swa-for-sapbas-vsx": "1.1.12",
     "@sap/textanalysis": "1.1.0",
-    "@sap/textbundle": "3.1.0",
+    "@sap/textbundle": "4.0.0",
     "@sap/textmining": "1.1.6",
     "@sap/ui-annotations": "2.0.5",
     "@sap/ui5-builder-webide-extension": "1.1.0",
     "@sap/ui5-jsdocs": "0.2.0",
     "@sap/ux-cds-odata-language-server-extension": "1.0.9",
-    "@sap/ux-specification": "1.84.1",
-    "@sap/ux-ui5-fe-mockserver-middleware": "1.0.26",
-    "@sap/ux-ui5-tooling": "1.0.28",
-    "@sap/vscode-cds": "3.2.0",
+    "@sap/ux-specification": "1.84.2",
+    "@sap/ux-ui5-fe-mockserver-middleware": "1.1.0",
+    "@sap/ux-ui5-tooling": "1.1.0",
+    "@sap/vscode-cds": "3.3.0",
     "@sap/webide-hdi-base-feature-vscode": "1.0.0",
     "@sap/webide-hdi-feature-vscode": "1.0.0",
     "@sap/wing-run-config-types": "4.1.3",
-    "@sap/wing-service-binding": "1.9.7",
-    "@sap/wing-service-explorer": "1.6.1",
+    "@sap/wing-service-binding": "1.9.10",
+    "@sap/wing-service-explorer": "1.6.7",
     "@sap/xb-msg": "0.9.12",
     "@sap/xb-msg-amqp-v091": "0.9.12",
     "@sap/xb-msg-amqp-v100": "0.9.48",
