--- a/package.json
+++ b/package.json
@@ -23,30 +23,6 @@
   },
   "homepage": "https://github.com/Seeker0/SAP-NPM-API-collection#readme",
   "dependencies": {
-    "@sap/abap-deploy": "0.10.23",
-    "@sap/apihub-service-provider": "1.0.5",
-    "@sap/approuter": "9.2.0",
-    "@sap/asp-middleware": "1.0.4",
-    "@sap/audit-logging": "4.1.0",
-    "@sap/cds": "4.5.3",
-    "@sap/cds-compiler": "1.49.2",
-    "@sap/cds-dk": "3.4.2",
-    "@sap/cds-dk-foss": "1.0.1",
-    "@sap/cds-foss": "2.2.0",
-    "@sap/cds-hana": "1.25.2",
-    "@sap/cds-lsp": "4.3.0",
-    "@sap/cds-messaging": "1.8.3",
-    "@sap/cds-mtx": "1.0.27",
-    "@sap/cds-odata-v2-adapter-proxy": "1.5.7",
-    "@sap/cds-ql": "1.21.2",
-    "@sap/cds-reflect": "2.13.5",
-    "@sap/cds-rest": "1.6.3",
-    "@sap/cds-runtime": "2.8.6",
-    "@sap/cds-services": "1.27.2",
-    "@sap/cds-sidecar-client": "1.1.12",
-    "@sap/cds-sql": "1.24.1",
-    "@sap/cds-sqlite": "1.24.1",
-    "@sap/cf-tools": "0.8.0",
     "@sap/cloud-sdk-op-vdm-accounting-document-service": "1.24.0",
     "@sap/cloud-sdk-op-vdm-activity-appointment-service": "1.24.0",
     "@sap/cloud-sdk-op-vdm-activity-phone-call-service": "1.24.0",
@@ -459,104 +435,6 @@
     "@sap/cloud-sdk-vdm-work-centers-service": "1.24.0",
     "@sap/cloud-sdk-vdm-workforce-availability-service": "1.24.0",
     "@sap/cloud-sdk-vdm-workforce-skill-tags-service": "1.24.0",
-    "@sap/cloud-sdk-vdm-workforce-timesheet-service": "1.24.0",
-    "@sap/consume-services": "1.7.14",
-    "@sap/consume-services-types": "0.3.11",
-    "@sap/create-hana-database-artifact": "1.0.0",
-    "@sap/destinations": "0.2.1",
-    "@sap/di.code-validation.core": "1.0.16",
-    "@sap/di.code-validation.grunt": "1.0.7",
-    "@sap/di.code-validation.js": "1.1.12",
-    "@sap/di.code-validation.json": "1.0.12",
-    "@sap/di.code-validation.xml": "1.1.24",
-    "@sap/dwf-core": "2.2.1",
-    "@sap/dwf-deploy": "2.4.0",
-    "@sap/dwf-dlm-backend": "2.3.0",
-    "@sap/dwf-dws-client": "2.5.4",
-    "@sap/dwf-generator": "2.2.1",
-    "@sap/dwf-ndso-backend": "2.2.0",
-    "@sap/e2e-trace": "3.0.0",
-    "@sap/edm-converters": "1.0.40",
-    "@sap/edmx2csn": "1.0.9",
-    "@sap/eslint-plugin-ui5-jsdocs": "2.0.1",
-    "@sap/eslint-plugin-webide-feature": "1.3.22",
-    "@sap/faas": "0.7.11",
-    "@sap/fibers": "4.0.3-0",
-    "@sap/fibrous": "0.5.0-5",
-    "@sap/fiori-json-services": "1.0.1",
-    "@sap/generator-add-hdb-module": "1.0.0",
-    "@sap/generator-base-mta-module": "1.3.4",
-    "@sap/generator-cap-project": "1.4.2",
-    "@sap/generator-cds": "2.17.4",
-    "@sap/generator-fiori": "1.1.2",
-    "@sap/generator-fiori-elements": "1.1.2",
-    "@sap/generator-fiori-freestyle": "1.1.2",
-    "@sap/generator-hdb-project": "1.0.0",
-    "@sap/grunt-sapui5-bestpractice-build": "1.4.6",
-    "@sap/grunt-sapui5-bestpractice-test": "2.0.3",
-    "@sap/grunt-sapui5module-bestpractice-build": "1.0.9",
-    "@sap/grunt-tests-webide-bestpractice": "0.0.15",
-    "@sap/hana-client": "2.7.23",
-    "@sap/hana-database-explorer": "1.0.0",
-    "@sap/hana-performance-tools": "0.1.5",
-    "@sap/hana-sqlscript-lsp": "1.0.1",
-    "@sap/hana-theme-vscode": "1.0.0",
-    "@sap/hana-tooling-feature-toggles": "1.0.0",
-    "@sap/hdbext": "7.1.1",
-    "@sap/hdi": "3.0.2",
-    "@sap/hdi-deploy": "4.0.2",
-    "@sap/hdi-dynamic-deploy": "2.0.1",
-    "@sap/hrtt-core-vscode": "1.0.0",
-    "@sap/html5-app-deployer": "2.3.1",
-    "@sap/html5-repo-mock": "2.0.1",
-    "@sap/instance-manager": "2.2.0",
-    "@sap/jobs-client": "1.6.1",
-    "@sap/logger-for-bas-extensions": "1.1.0",
-    "@sap/logging": "6.0.2",
-    "@sap/modules-exploration": "1.6.10",
-    "@sap/mta-lib": "1.6.7",
-    "@sap/node-jwt": "1.6.14",
-    "@sap/node-vsi": "1.4.21",
-    "@sap/odata-commons": "2.4.2",
-    "@sap/odata-server": "1.8.3",
-    "@sap/odata-v4": "1.9.0",
-    "@sap/odm": "2.0.0",
-    "@sap/open.fe": "1.86.0",
-    "@sap/pdms-sdk": "1.0.0",
-    "@sap/portal-cf-content-deployer": "4.12.0-20210201101230",
-    "@sap/sbf": "6.2.5",
-    "@sap/sbss": "5.1.0",
-    "@sap/sds-deploy": "2.0.5",
-    "@sap/service-providers": "0.3.12",
-    "@sap/site-app-server": "1.17.0",
-    "@sap/site-content-deployer": "1.20.0",
-    "@sap/site-entry": "1.30.0",
-    "@sap/swa-for-sapbas-vsx": "1.1.13",
-    "@sap/textanalysis": "1.1.0",
-    "@sap/textbundle": "4.0.0",
-    "@sap/textmining": "1.1.6",
-    "@sap/ui-annotations": "2.0.5",
-    "@sap/ui5-builder-webide-extension": "1.1.4",
-    "@sap/ux-cds-odata-language-server-extension": "1.1.2",
-    "@sap/ux-specification": "1.84.3",
-    "@sap/ux-ui5-fe-mockserver-middleware": "1.1.2",
-    "@sap/ux-ui5-tooling": "1.1.2",
-    "@sap/vscode-cds": "3.3.0",
-    "@sap/webide-hdi-base-feature-vscode": "1.0.0",
-    "@sap/webide-hdi-feature-vscode": "1.0.0",
-    "@sap/wing-run-config-types": "4.1.5",
-    "@sap/wing-service-binding": "1.9.10",
-    "@sap/wing-service-explorer": "1.6.7",
-    "@sap/xb-msg": "0.9.12",
-    "@sap/xb-msg-amqp-v091": "0.9.12",
-    "@sap/xb-msg-amqp-v100": "0.9.48",
-    "@sap/xb-msg-env": "0.9.7",
-    "@sap/xb-msg-mqtt-v311": "0.9.14",
-    "@sap/xsenv": "3.1.0",
-    "@sap/xsjs": "6.0.8",
-    "@sap/xsjs-test": "3.1.3",
-    "@sap/xsodata": "7.3.5",
-    "@sap/xss-secure": "4.0.0",
-    "@sap/xssec": "3.1.1"
+    "@sap/cloud-sdk-vdm-workforce-timesheet-service": "1.24.0"
   }
 }
