--- a/package.json
+++ b/package.json
@@ -28,22 +28,22 @@
     "@sap/approuter": "10.1.0",
     "@sap/asp-middleware": "1.0.4",
     "@sap/audit-logging": "5.0.0",
-    "@sap/cds": "4.6.5",
-    "@sap/cds-compiler": "1.50.2",
+    "@sap/cds": "5.0.4",
+    "@sap/cds-compiler": "2.1.4",
     "@sap/cds-dk": "3.5.1",
     "@sap/cds-dk-foss": "1.0.2",
-    "@sap/cds-foss": "2.2.1",
+    "@sap/cds-foss": "2.3.0",
     "@sap/cds-hana": "1.25.2",
-    "@sap/cds-lsp": "4.3.0",
+    "@sap/cds-lsp": "5.0.0",
     "@sap/cds-messaging": "1.8.3",
-    "@sap/cds-mtx": "1.1.5",
-    "@sap/cds-odata-v2-adapter-proxy": "1.5.10",
+    "@sap/cds-mtx": "1.2.0",
+    "@sap/cds-odata-v2-adapter-proxy": "1.6.0",
     "@sap/cds-ql": "1.21.2",
     "@sap/cds-reflect": "2.13.5",
     "@sap/cds-rest": "1.6.3",
-    "@sap/cds-runtime": "2.9.9",
+    "@sap/cds-runtime": "3.0.4",
     "@sap/cds-services": "1.27.2",
-    "@sap/cds-sidecar-client": "1.1.13",
+    "@sap/cds-sidecar-client": "1.1.14",
     "@sap/cds-sql": "1.24.1",
     "@sap/cds-sqlite": "1.24.1",
     "@sap/cf-tools": "1.1.0",
@@ -477,8 +477,9 @@
     "@sap/dwf-generator": "2.2.1",
     "@sap/dwf-ndso-backend": "2.2.0",
     "@sap/e2e-trace": "3.0.0",
-    "@sap/edm-converters": "1.0.40",
+    "@sap/edm-converters": "1.0.41",
     "@sap/edmx2csn": "1.0.9",
+    "@sap/eslint-plugin-cds": "1.0.7",
     "@sap/eslint-plugin-ui5-jsdocs": "2.0.5",
     "@sap/eslint-plugin-webide-feature": "1.3.22",
     "@sap/faas": "0.7.11",
@@ -544,7 +545,7 @@
     "@sap/ux-specification": "1.84.7",
     "@sap/ux-ui5-fe-mockserver-middleware": "1.1.7",
     "@sap/ux-ui5-tooling": "1.1.7",
-    "@sap/vscode-cds": "3.3.0",
+    "@sap/vscode-cds": "4.0.0",
     "@sap/webide-hdi-base-feature-vscode": "1.0.0",
     "@sap/webide-hdi-feature-vscode": "1.1.0",
     "@sap/wing-run-config-types": "4.1.5",
