--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@sap/cds-ql": "1.21.2",
     "@sap/cds-reflect": "2.13.5",
     "@sap/cds-rest": "1.6.3",
-    "@sap/cds-runtime": "2.9.11",
+    "@sap/cds-runtime": "3.0.6",
     "@sap/cds-services": "1.27.2",
     "@sap/cds-sidecar-client": "1.1.14",
     "@sap/cds-sql": "1.24.1",
@@ -462,7 +462,7 @@
     "@sap/cloud-sdk-vdm-workforce-timesheet-service": "1.24.0",
     "@sap/consume-services": "1.7.14",
     "@sap/consume-services-types": "0.3.11",
-    "@sap/create-hana-database-artifact": "1.1.0",
+    "@sap/create-hana-database-artifact": "1.2.0",
     "@sap/destination-instance-service-provider": "1.2.0",
     "@sap/destinations": "0.2.1",
     "@sap/di.code-validation.core": "1.0.16",
@@ -486,7 +486,7 @@
     "@sap/fibers": "5.0.0-0",
     "@sap/fibrous": "0.5.0-6",
     "@sap/fiori-json-services": "1.0.1",
-    "@sap/generator-add-hdb-module": "1.0.1",
+    "@sap/generator-add-hdb-module": "1.1.0",
     "@sap/generator-base-mta-module": "1.3.5",
     "@sap/generator-cap-project": "1.4.2",
     "@sap/generator-cds": "2.17.4",
@@ -494,6 +494,7 @@
     "@sap/generator-fiori-elements": "1.1.2",
     "@sap/generator-fiori-freestyle": "1.1.2",
     "@sap/generator-hdb-project": "1.0.1",
+    "@sap/graph-toolkit": "1.0.2",
     "@sap/grunt-sapui5-bestpractice-build": "1.4.12",
     "@sap/grunt-sapui5-bestpractice-test": "2.0.3",
     "@sap/grunt-sapui5module-bestpractice-build": "1.0.9",
@@ -508,7 +509,7 @@
     "@sap/hdi": "4.0.1",
     "@sap/hdi-deploy": "4.0.4",
     "@sap/hdi-dynamic-deploy": "2.1.1",
-    "@sap/hrtt-core-vscode": "1.1.0",
+    "@sap/hrtt-core-vscode": "1.2.0",
     "@sap/html5-app-deployer": "3.0.0",
     "@sap/html5-repo-mock": "2.0.1",
     "@sap/instance-manager": "2.2.0",
