--- a/package.json
+++ b/package.json
@@ -445,6 +445,7 @@
     "@sap/cloud-sdk-vdm-supplier-invoice-process-service": "1.24.0",
     "@sap/cloud-sdk-vdm-supplier-item-service": "1.24.0",
     "@sap/cloud-sdk-vdm-supplier-quotation-service": "1.24.0",
+    "@sap/cloud-sdk-vdm-supply-availability-protection-plan-service": "1.24.0",
     "@sap/cloud-sdk-vdm-treasury-position-flow-service": "1.24.0",
     "@sap/cloud-sdk-vdm-treasury-posting-journal-entry-line-item-service": "1.24.0",
     "@sap/cloud-sdk-vdm-trial-balance-service": "1.24.0",
@@ -498,7 +499,7 @@
     "@sap/grunt-sapui5-bestpractice-test": "2.0.3",
     "@sap/grunt-sapui5module-bestpractice-build": "1.0.9",
     "@sap/grunt-tests-webide-bestpractice": "0.0.15",
-    "@sap/hana-client": "2.8.16",
+    "@sap/hana-client": "2.8.20",
     "@sap/hana-database-explorer": "1.1.0",
     "@sap/hana-performance-tools": "1.1.6",
     "@sap/hana-sqlscript-lsp": "1.1.0",
@@ -511,7 +512,7 @@
     "@sap/hrtt-core-vscode": "1.2.0",
     "@sap/html5-app-deployer": "3.0.0",
     "@sap/html5-repo-mock": "2.0.1",
-    "@sap/instance-manager": "2.2.0",
+    "@sap/instance-manager": "3.0.0",
     "@sap/jobs-client": "1.6.1",
     "@sap/logger-for-bas-extensions": "1.1.0",
     "@sap/logging": "6.0.3",
@@ -559,7 +560,7 @@
     "@sap/xsenv": "3.1.0",
     "@sap/xsjs": "6.1.1",
     "@sap/xsjs-test": "3.1.3",
-    "@sap/xsodata": "7.3.7",
+    "@sap/xsodata": "7.4.2",
     "@sap/xss-secure": "4.0.0",
     "@sap/xssec": "3.2.0"
   }
