--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   "homepage": "https://github.com/Seeker0/SAP-NPM-API-collection#readme",
   "dependencies": {
     "@sap/abap-deploy": "0.10.27",
-    "@sap/apihub-service-provider": "1.2.0",
-    "@sap/approuter": "10.5.1",
+    "@sap/apihub-service-provider": "1.2.1",
+    "@sap/approuter": "10.6.0",
     "@sap/asp-middleware": "1.0.6",
     "@sap/audit-logging": "5.0.0",
     "@sap/bas-sdk-cf-utils": "1.2.0",
@@ -38,7 +38,7 @@
     "@sap/cds-lsp": "5.1.1",
     "@sap/cds-messaging": "1.8.3",
     "@sap/cds-mtx": "2.1.2",
-    "@sap/cds-odata-v2-adapter-proxy": "1.7.7",
+    "@sap/cds-odata-v2-adapter-proxy": "1.7.8",
     "@sap/cds-ql": "1.21.2",
     "@sap/cds-reflect": "2.13.5",
     "@sap/cds-rest": "1.6.3",
@@ -493,7 +493,7 @@
     "@sap/cloud-sdk-workflow-service-cf": "1.26.0",
     "@sap/consume-services": "1.7.14",
     "@sap/consume-services-types": "0.3.11",
-    "@sap/create-hana-database-artifact": "1.3.0",
+    "@sap/create-hana-database-artifact": "1.4.0",
     "@sap/destination-instance-service-provider": "1.2.5",
     "@sap/destinations": "0.2.1",
     "@sap/di.code-validation.core": "1.0.16",
@@ -517,14 +517,14 @@
     "@sap/fibers": "5.0.0-0",
     "@sap/fibrous": "0.5.0-6",
     "@sap/fiori-json-services": "1.0.1",
-    "@sap/generator-add-hdb-module": "1.2.0",
+    "@sap/generator-add-hdb-module": "1.3.0",
     "@sap/generator-base-mta-module": "1.3.7",
     "@sap/generator-cap-project": "1.5.4",
     "@sap/generator-cds": "2.17.7",
     "@sap/generator-fiori": "1.2.5",
     "@sap/generator-fiori-elements": "1.1.9",
     "@sap/generator-fiori-freestyle": "1.1.9",
-    "@sap/generator-hdb-project": "1.2.0",
+    "@sap/generator-hdb-project": "1.3.0",
     "@sap/graph-toolkit": "2.0.0",
     "@sap/grunt-sapui5-bestpractice-build": "1.4.13",
     "@sap/grunt-sapui5-bestpractice-test": "2.0.4",
@@ -532,15 +532,16 @@
     "@sap/grunt-tests-webide-bestpractice": "0.0.15",
     "@sap/hana-client": "2.9.23",
     "@sap/hana-database-explorer": "1.2.0",
+    "@sap/hana-eim-sditools-vscode": "1.0.5-1",
     "@sap/hana-performance-tools": "1.1.14",
-    "@sap/hana-sqlscript-lsp": "1.2.0",
+    "@sap/hana-sqlscript-lsp": "1.3.0",
     "@sap/hana-theme-vscode": "1.0.0",
     "@sap/hana-tooling-feature-toggles": "1.0.0",
     "@sap/hdbext": "7.3.0",
     "@sap/hdi": "4.0.2",
     "@sap/hdi-deploy": "4.1.0",
     "@sap/hdi-dynamic-deploy": "2.2.0",
-    "@sap/hrtt-core-vscode": "1.3.0",
+    "@sap/hrtt-core-vscode": "1.4.0",
     "@sap/html5-app-deployer": "3.1.1",
     "@sap/html5-repo-mock": "2.0.3",
     "@sap/instance-manager": "3.0.0",
@@ -555,7 +556,7 @@
     "@sap/odata-server": "1.8.3",
     "@sap/odata-v4": "1.9.0",
     "@sap/odm": "2.0.0",
-    "@sap/open.fe": "1.91.0",
+    "@sap/open.fe": "1.92.0",
     "@sap/pdms-sdk": "1.0.0",
     "@sap/portal-cf-content-deployer": "4.12.0-20210201101230",
     "@sap/sbf": "6.2.12",
@@ -578,8 +579,8 @@
     "@sap/ux-ui5-fe-mockserver-middleware": "1.2.5",
     "@sap/ux-ui5-tooling": "1.2.5",
     "@sap/vscode-cds": "4.1.1",
-    "@sap/webide-hdi-base-feature-vscode": "1.2.0",
-    "@sap/webide-hdi-feature-vscode": "1.3.0",
+    "@sap/webide-hdi-base-feature-vscode": "1.3.0",
+    "@sap/webide-hdi-feature-vscode": "1.4.0",
     "@sap/wing-run-config-types": "4.2.0",
     "@sap/wing-service-binding": "1.10.1",
     "@sap/wing-service-explorer": "1.6.10",
