--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
   "dependencies": {
     "@sap/abap-deploy": "0.10.27",
     "@sap/apihub-service-provider": "1.2.1",
-    "@sap/approuter": "10.6.0",
+    "@sap/approuter": "10.6.1",
+    "@sap/artifact-management": "1.0.0",
     "@sap/asp-middleware": "1.0.6",
     "@sap/audit-logging": "5.0.0",
     "@sap/bas-sdk-cf-utils": "1.2.0",
-    "@sap/cds": "5.4.0",
-    "@sap/cds-compiler": "1.50.10",
-    "@sap/cds-dk": "4.3.3",
+    "@sap/cds": "5.4.1",
+    "@sap/cds-compiler": "2.5.0",
+    "@sap/cds-dk": "4.4.1",
     "@sap/cds-dk-foss": "1.0.2",
     "@sap/cds-foss": "3.0.0",
     "@sap/cds-hana": "1.25.2",
@@ -510,7 +511,7 @@
     "@sap/e2e-trace": "3.0.0",
     "@sap/edm-converters": "1.0.41",
     "@sap/edmx2csn": "1.0.9",
-    "@sap/eslint-plugin-cds": "2.0.4",
+    "@sap/eslint-plugin-cds": "2.0.5",
     "@sap/eslint-plugin-ui5-jsdocs": "2.0.5",
     "@sap/eslint-plugin-webide-feature": "1.3.22",
     "@sap/faas": "0.7.11",
@@ -533,7 +534,7 @@
     "@sap/hana-client": "2.9.23",
     "@sap/hana-database-explorer": "1.2.0",
     "@sap/hana-eim-sditools-vscode": "1.0.5-1",
-    "@sap/hana-performance-tools": "1.2.4",
+    "@sap/hana-performance-tools": "1.2.6",
     "@sap/hana-sqlscript-lsp": "1.3.0",
     "@sap/hana-theme-vscode": "1.0.0",
     "@sap/hana-tooling-feature-toggles": "1.0.0",
@@ -543,7 +544,7 @@
     "@sap/hdi-dynamic-deploy": "2.2.0",
     "@sap/hrtt-core-vscode": "1.4.0",
     "@sap/html5-app-deployer": "3.1.1",
-    "@sap/html5-repo-mock": "2.0.3",
+    "@sap/html5-repo-mock": "2.1.0",
     "@sap/instance-manager": "3.0.0",
     "@sap/jobs-client": "1.6.1",
     "@sap/logger-for-bas-extensions": "1.1.0",
@@ -583,7 +584,7 @@
     "@sap/webide-hdi-feature-vscode": "1.4.0",
     "@sap/wing-run-config-types": "4.2.0",
     "@sap/wing-service-binding": "1.10.1",
-    "@sap/wing-service-explorer": "1.6.10",
+    "@sap/wing-service-explorer": "1.7.2",
     "@sap/xb-msg": "0.9.12",
     "@sap/xb-msg-amqp-v091": "0.9.12",
     "@sap/xb-msg-amqp-v100": "0.9.52",
