--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "@sap/abap-deploy": "0.10.27",
     "@sap/apihub-service-provider": "1.2.2",
-    "@sap/approuter": "10.7.1",
+    "@sap/approuter": "10.8.0",
     "@sap/artifact-management": "1.0.1",
     "@sap/asp-middleware": "1.0.6",
     "@sap/audit-logging": "5.1.0",
@@ -253,6 +253,7 @@
     "@sap/cloud-sdk-vdm-bill-of-material-v2-service": "1.27.0",
     "@sap/cloud-sdk-vdm-bill-of-material-where-used-service": "1.27.0",
     "@sap/cloud-sdk-vdm-billing-document-request-service": "1.27.0",
+    "@sap/cloud-sdk-vdm-billing-document-service": "1.27.0",
     "@sap/cloud-sdk-vdm-brazil-business-place-service": "1.27.0",
     "@sap/cloud-sdk-vdm-brazil-nota-fiscal-service": "1.27.0",
     "@sap/cloud-sdk-vdm-buffer-profile-service": "1.27.0",
