--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@sap/asp-middleware": "1.0.6",
     "@sap/audit-logging": "5.1.0",
     "@sap/bas-sdk-cf-utils": "1.2.0",
-    "@sap/cds": "5.4.4",
+    "@sap/cds": "5.4.6",
     "@sap/cds-compiler": "2.5.2",
     "@sap/cds-dk": "4.4.2",
     "@sap/cds-dk-foss": "1.0.2",
@@ -532,6 +532,7 @@
     "@sap/di.code-validation.js": "1.1.14",
     "@sap/di.code-validation.json": "1.0.12",
     "@sap/di.code-validation.xml": "1.1.26",
+    "@sap/dwc-cli": "2021.20.1",
     "@sap/dwf-core": "2.2.1",
     "@sap/dwf-deploy": "2.4.0",
     "@sap/dwf-dlm-backend": "2.3.0",
@@ -552,7 +553,7 @@
     "@sap/generator-base-mta-module": "1.3.7",
     "@sap/generator-cap-project": "1.5.4",
     "@sap/generator-cds": "2.17.7",
-    "@sap/generator-fiori": "1.3.2",
+    "@sap/generator-fiori": "1.3.4",
     "@sap/generator-fiori-elements": "1.1.9",
     "@sap/generator-fiori-freestyle": "1.1.9",
     "@sap/generator-hdb-project": "1.3.0",
@@ -561,7 +562,7 @@
     "@sap/grunt-sapui5-bestpractice-test": "2.0.4",
     "@sap/grunt-sapui5module-bestpractice-build": "1.0.9",
     "@sap/grunt-tests-webide-bestpractice": "0.0.15",
-    "@sap/hana-client": "2.9.28",
+    "@sap/hana-client": "2.10.13",
     "@sap/hana-database-explorer": "1.2.0",
     "@sap/hana-eim-sditools-vscode": "1.0.5-1",
     "@sap/hana-performance-tools": "1.2.6",
@@ -606,10 +607,10 @@
     "@sap/textmining": "1.1.6",
     "@sap/ui-annotations": "2.0.5",
     "@sap/ui5-builder-webide-extension": "1.1.6",
-    "@sap/ux-cds-odata-language-server-extension": "1.3.2",
-    "@sap/ux-specification": "1.90.8",
+    "@sap/ux-cds-odata-language-server-extension": "1.3.3",
+    "@sap/ux-specification": "1.90.9",
     "@sap/ux-ui5-fe-mockserver-middleware": "1.3.1",
-    "@sap/ux-ui5-tooling": "1.3.2",
+    "@sap/ux-ui5-tooling": "1.3.3",
     "@sap/vscode-cds": "4.2.0",
     "@sap/webide-hdi-base-feature-vscode": "1.4.0",
     "@sap/webide-hdi-feature-vscode": "1.5.0",
@@ -626,6 +627,6 @@
     "@sap/xsjs-test": "3.2.2",
     "@sap/xsodata": "7.4.4",
     "@sap/xss-secure": "4.0.0",
-    "@sap/xssec": "3.2.5"
+    "@sap/xssec": "3.2.7"
   }
 }
